web/src/styles/Header.scss
.header {
    background-color: var(--primary-color);
    padding: 2rem 2rem;
    width: 100%;
    

    display: flex;
    align-items: center;
    justify-content: space-between;

    position: relative;
    z-index: 100;

    .header-left .logo {
        display: flex;
        align-items: center;
        gap: 10px;
        font-family: "DM sans", sans-serif;
        font-weight: 700;
        font-size: 1.8rem;
        color: var(--text-light);
        text-decoration: none;


    }

    .header-nav {
        display: flex;
        gap: 2rem;
        align-content: center;

        a {
            color: var(--text-light-accent);
            text-decoration: none;
            font-family: var(--font-main);
            font-weight: 600;
            font-size: 1rem;
            transition: color 0.2s;

            &:hover {
                color: var(--accent-color);
                
            }
        }
    }


    .hamburger-btn {
        display: none;
        background: none;
        border: none;
        color: var(--text-light);
        font-size: 2rem;
        cursor: pointer;
    }

    .mobile-menu {
        position: absolute;
        top: 100%;
        left: 0;
        width: 100%;
        background-color: var(--primary-color);
        border-top: 1px solid rgba(255, 255, 255, 0.1);

        display: flex;
        flex-direction: column;
        align-items: center;
        padding: 0;

        max-height: 0;
        overflow: hidden;
        transition: all 0.3s ease-in-out;

        a {
            color: var(--text-light);
            text-decoration: none;
            font-size: 1.2rem;
            font-weight: 500;
            margin: 15px 0;

            &:hover { color: var(--accent-color); }
        }

        .mobile-cta {
            background-color: var(--accent-color);
            color: var(--text-dark);
            padding: 10px 30px;
            border-radius: 6px;
            margin-bottom: 20px;
        }

        &.open {
            max-height: 500px;
            padding: 20px 0;
            border-bottom: 1px solid rgba(255,255,255,0.1);
        }
    }

    @media (max-width: 900px) {
        .desktop-only {
            display: none;
        }

        .hamburger-btn {
            display: block;
        }
    }
}

